force-app/main/default/objects/AssuranceCouverture__c/AssuranceCouverture__c.object-meta.xml
<CustomObject>
    <description>Objet représentant les assurances et couvertures en coopération avec la pharmacie.</description>
    <label>Assurance Couverture</label>
    <nameField>
        <displayFormat>AssuranceCouverture-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AssuranceCouvertures</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>