force-app/main/default/objects/AssuranceCouverture__c/fields/DateDemission__c.field-meta.xml
<CustomField>
    <fullName>DateDemission__c</fullName>
    <description>champs représentant la date d&apos;échéance</description>
    <label>Date Demission</label>
    <type>Date</type>
</CustomField>