force-app/main/default/objects/AssuranceCouverture__c/fields/MontantPayer__c.field-meta.xml
<CustomField>
    <fullName>MontantPayer__c</fullName>
    <formula>MontantTotal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Montant Payer</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>