force-app/main/default/objects/AssuranceCouverture__c/fields/MontantTotal__c.field-meta.xml
<CustomField>
    <fullName>MontantTotal__c</fullName>
    <description>C&apos;est le montant total donnée</description>
    <label>Montant Total</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>