force-app/main/default/objects/AssuranceCouverture__c/fields/PrixCumulerMedicament__c.field-meta.xml
<CustomField>
    <fullName>PrixCumulerMedicament__c</fullName>
    <description>c&apos;est le prix total cumulé des médicaments</description>
    <label>Prix Cumuler Medicament</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>