force-app/main/default/objects/AssuranceCouverture__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>status représente l&apos;etat de l&apos;assurance</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Activé</fullName>
            </value>
            <value>
                <fullName>Expiré</fullName>
            </value>
            <value>
                <fullName>Bloqué</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>