force-app/main/default/objects/AssuranceCouverture__c/listViews/AssuranceCouvertures.listView-meta.xml
<ListView>
    <fullName>AssuranceCouvertures</fullName>
    <columns>NAME</columns>
    <columns>MontantTotal__c</columns>
    <columns>MontantPayer__c</columns>
    <columns>Status__c</columns>
    <filterScope>Mine</filterScope>
    <label>AssuranceCouvertures</label>
</ListView>