force-app/main/default/objects/AssuranceCouverture__c/listViews/AssuranceCouverturesActives.listView-meta.xml
<ListView>
    <fullName>AssuranceCouverturesActives</fullName>
    <columns>NAME</columns>
    <columns>MontantTotal__c</columns>
    <columns>MontantPayer__c</columns>
    <columns>Status__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Activé</value>
    </filters>
    <label>AssuranceCouvertures  Activés</label>
</ListView>