force-app/main/default/objects/AssuranceCouverture__c/listViews/AssuranceCouverturesBloques.listView-meta.xml
<ListView>
    <fullName>AssuranceCouverturesBloques</fullName>
    <columns>NAME</columns>
    <columns>MontantTotal__c</columns>
    <columns>MontantPayer__c</columns>
    <columns>Status__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Bloqué</value>
    </filters>
    <label>AssuranceCouvertures  Bloqués</label>
</ListView>