force-app/main/default/objects/AssuranceCouverture__c/listViews/VueRecemment.listView-meta.xml
<ListView>
    <fullName>VueRecemment</fullName>
    <columns>NAME</columns>
    <columns>MontantTotal__c</columns>
    <columns>MontantPayer__c</columns>
    <columns>Status__c</columns>
    <filterScope>Mine</filterScope>
    <label>Vue Récemment</label>
</ListView>